Refactor code using modern Java APIs and simplify expressions
Replace Arrays.asList with List.of for single-element and immutable collections. Use pattern matching for instanceof checks. Replace replaceAll with replace for literal strings. Convert Lombok @Value classes to records. Remove unnecessary lambda braces and redundant toString() calls. Use text blocks for multi-line log messages. Replace Integer.valueOf with Integer.parseInt. Remove unused imports and parameters. Replace addFileSystemBind with withCopyToContainer. Use StandardCharsets.UTF_8 directly instead of name(). Replace Hamcrest matchers with AssertJ assertions. Simplify Optional assertions with hasValue().